--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -232,13 +232,29 @@
 #completion-modal button:hover {
     background-color: #28a428;
 }
+#pdfButton {
+    padding: 10px 20px;
+    font-size: 1.2em;
+    background-color: #8e24aa;
+    color: #ffffff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+#pdfButton:hover {
+    background-color: #7b1fa2;
+    transform: scale(1.05);
+}
     </style>
 </head>
 <body>
 <button onclick="window.location.href='../index.html'" class="back-btn">
     Back
 </button>
-<button class="pdf-btn" onclick="generatePDF()">Generate PDF</button>
+<button id="pdfButton" class="pdf-btn" onclick="generatePDF()" style="display: none;">Generate PDF</button>
      
 <h1>Hannah Matching Game</h1>
 
@@ -283,21 +299,31 @@
     // Inicialização do Firebase
     firebase.initializeApp(firebaseConfig);
 
-    // Função de autenticação simples
-    firebase.auth().onAuthStateChanged((user) => {
-        if (user) {
-            console.log("Usuário autenticado:", user);
-        } else {
-            console.log("Nenhum usuário autenticado.");
-        }
-    });
+firebase.auth().onAuthStateChanged((user) => {
+    if (user) {
+        const userId = user.uid;
+        const userRoleRef = firebase.database().ref(`usuarios/${userId}/role`);
 
+        userRoleRef.once('value').then((snapshot) => {
+            const role = snapshot.val();
+            // Exibe o botão apenas se o role for "professor" ou "proprietário"
+            if (role === 'professor' || role === 'proprietário') {
+                document.getElementById("pdfButton").style.display = "inline-block";
+            }
+        }).catch((error) => {
+            console.error("Erro ao buscar o role do usuário:", error);
+        });
+    } else {
+        console.log("Nenhum usuário autenticado.");
+    }
+});
+  
 function generatePDF() {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
 
     // Caminho da logo
-    const logoPath = '../../../../imagens/hannah_logo.pdf';
+    const logoPath = '../../../../imagens/hannah_logo.png';
 
     // Cria um elemento <img> para carregar a logo
     const logo = new Image();
