--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -399,50 +399,58 @@ function generatePDF() {
     let currentUtterance = null;  // Para rastrear a leitura atual
 
     // Carregar as lições e explicações dinamicamente do arquivo texto.txt
-    fetch('texto.txt')
-        .then(response => response.text())
-        .then(data => {
-            const lines = data.split('\n');
+fetch('texto.txt')
+    .then(response => {
+        if (!response.ok) {
+            throw new Error("Erro ao carregar o arquivo texto.txt");
+        }
+        return response.text();
+    })
+    .then(data => {
+        const lines = data.split('\n');
 
-            // Montar o array de lições e explicações
-            lines.forEach((line, index) => {
-                const [type, lesson, explanation] = line.split('|');
-                if (type === 'lesson') {
-                    lessonData.push({
-                        img: `imagens/imagem${index + 1}.png`,
-                        title: lesson,
-                        text: explanation,
-                        matchIndex: index + 1 // Guarda o índice original
-                    });
-                }
-            });
-
-            // Embaralhar as lições e explicações independentemente
-            const shuffledLessons = shuffleArray([...lessonData]);
-            const shuffledExplanations = shuffleArray([...lessonData]);
-
-            // Preencher as colunas com as lições e explicações embaralhadas
-            const lessonsContainer = document.getElementById('lessons');
-            const explanationsContainer = document.getElementById('explanations');
-
-            shuffledLessons.forEach(item => {
-                const lessonDiv = document.createElement('div');
-                lessonDiv.classList.add('list-item');
-                lessonDiv.textContent = item.title;
-                lessonDiv.dataset.match = item.matchIndex;
-                lessonDiv.onclick = () => selectLeftItem(lessonDiv);
-                lessonsContainer.appendChild(lessonDiv);
-            });
-
-            shuffledExplanations.forEach(item => {
-                const explanationDiv = document.createElement('div');
-                explanationDiv.classList.add('drop-zone');
-                explanationDiv.textContent = item.text;
-                explanationDiv.dataset.match = item.matchIndex;
-                explanationDiv.onclick = () => selectRightItem(explanationDiv);
-                explanationsContainer.appendChild(explanationDiv);
-            });
+        // Montar o array de lições e explicações
+        lines.forEach((line, index) => {
+            const [type, lesson, explanation] = line.split('|');
+            if (type === 'lesson') {
+                lessonData.push({
+                    img: `imagens/imagem${index + 1}.png`,
+                    title: lesson,
+                    text: explanation,
+                    matchIndex: index + 1 // Guarda o índice original
+                });
+            }
         });
+
+        // Embaralhar as lições e explicações independentemente
+        const shuffledLessons = shuffleArray([...lessonData]);
+        const shuffledExplanations = shuffleArray([...lessonData]);
+
+        // Preencher as colunas com as lições e explicações embaralhadas
+        const lessonsContainer = document.getElementById('lessons');
+        const explanationsContainer = document.getElementById('explanations');
+
+        shuffledLessons.forEach(item => {
+            const lessonDiv = document.createElement('div');
+            lessonDiv.classList.add('list-item');
+            lessonDiv.textContent = item.title;
+            lessonDiv.dataset.match = item.matchIndex;
+            lessonDiv.onclick = () => selectLeftItem(lessonDiv);
+            lessonsContainer.appendChild(lessonDiv);
+        });
+
+        shuffledExplanations.forEach(item => {
+            const explanationDiv = document.createElement('div');
+            explanationDiv.classList.add('drop-zone');
+            explanationDiv.textContent = item.text;
+            explanationDiv.dataset.match = item.matchIndex;
+            explanationDiv.onclick = () => selectRightItem(explanationDiv);
+            explanationsContainer.appendChild(explanationDiv);
+        });
+    })
+    .catch(error => {
+        console.error("Erro ao carregar os dados:", error);
+    });
 
     function shuffleArray(array) {
         for (let i = array.length - 1; i > 0; i--) {
