--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -398,32 +398,28 @@ function generatePDF() {
     let currentAnimatedItem = null;
     let currentUtterance = null;  // Para rastrear a leitura atual
 
-    // Carregar as lições e explicações dinamicamente do arquivo texto.txt
+  // Carregar as lições e explicações dinamicamente do arquivo texto.txt
 fetch('texto.txt')
     .then(response => {
-        // Verifica se a resposta é bem-sucedida
         if (!response.ok) {
             throw new Error("Erro ao carregar o arquivo texto.txt");
         }
-        // Retorna o conteúdo do arquivo como texto
         return response.text();
     })
     .then(data => {
-        const lines = data.split('\n');
-        
-        // Montar o array de lições e explicações a partir das linhas do arquivo
+        const lines = data.split('\n').filter(line => line.trim() !== '');  // Filtra linhas vazias
         lines.forEach((line, index) => {
             const [type, lesson, explanation] = line.split('|');
             if (type === 'lesson') {
                 lessonData.push({
-                    img: `imagens/imagem${index + 1}.png`,  // Caminho para a imagem correspondente
+                    img: `imagens/imagem${index + 1}.png`,
                     title: lesson,
                     text: explanation,
-                    matchIndex: index + 1  // Guarda o índice original
+                    matchIndex: index + 1
                 });
             }
         });
-
+        
         // Embaralhar as lições e explicações de forma independente
         const shuffledLessons = shuffleArray([...lessonData]);
         const shuffledExplanations = shuffleArray([...lessonData]);
@@ -452,7 +448,6 @@ fetch('texto.txt')
         });
     })
     .catch(error => {
-        // Exibe o erro no console se houver problemas ao carregar o arquivo
         console.error("Erro ao carregar os dados:", error);
     });
 
