--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -398,7 +398,7 @@ function generatePDF() {
     let currentAnimatedItem = null;
     let currentUtterance = null;  // Para rastrear a leitura atual
 
-  // Carregar as lições e explicações dinamicamente do arquivo texto.txt
+// Carregar as lições e explicações dinamicamente do arquivo texto.txt
 fetch('texto.txt')
     .then(response => {
         if (!response.ok) {
@@ -408,9 +408,10 @@ fetch('texto.txt')
     })
     .then(data => {
         const lines = data.split('\n').filter(line => line.trim() !== '');  // Filtra linhas vazias
+        
         lines.forEach((line, index) => {
-            const [type, lesson, explanation] = line.split('|');
-            if (type === 'lesson') {
+            const [type, lesson, explanation] = line.split('|').map(item => item.trim());
+            if (type === 'lesson' && lesson && explanation) {  // Verifica se todos os campos estão preenchidos
                 lessonData.push({
                     img: `imagens/imagem${index + 1}.png`,
                     title: lesson,
@@ -419,12 +420,15 @@ fetch('texto.txt')
                 });
             }
         });
+
+        if (lessonData.length === 0) {
+            throw new Error("Nenhuma lição carregada. Verifique o conteúdo do arquivo texto.txt.");
+        }
         
         // Embaralhar as lições e explicações de forma independente
         const shuffledLessons = shuffleArray([...lessonData]);
         const shuffledExplanations = shuffleArray([...lessonData]);
 
-        // Seleciona os elementos de contêiner para preencher as colunas de lições e explicações
         const lessonsContainer = document.getElementById('lessons');
         const explanationsContainer = document.getElementById('explanations');
 
