--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -407,6 +407,7 @@ fetch('texto.txt')
         return response.text();
     })
     .then(data => {
+        console.log("Conteúdo do arquivo texto.txt:", data);  // Exibe o conteúdo do arquivo
         const lines = data.split('\n').filter(line => line.trim() !== '');  // Filtra linhas vazias
         
         lines.forEach((line, index) => {
@@ -421,6 +422,8 @@ fetch('texto.txt')
             }
         });
 
+        console.log("Dados das lições carregadas:", lessonData);  // Exibe os dados carregados
+        
         if (lessonData.length === 0) {
             throw new Error("Nenhuma lição carregada. Verifique o conteúdo do arquivo texto.txt.");
         }
@@ -521,7 +524,6 @@ function checkCompletion() {
         showCompletionModal();
     }
 }
-
 
 function showCompletionModal() {
     updateProgressInDatabase();  // Chama a função para atualizar o progresso no banco de dados
