--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -399,7 +399,7 @@ function generatePDF() {
     let currentUtterance = null;  // Para rastrear a leitura atual
 
 // Carregar as lições e explicações dinamicamente do arquivo texto.txt
-   fetch('texto.txt')
+   fetch('/Level1/Unit1/MatchingGame/texto.txt')
     .then(response => {
         console.log("URL do arquivo:", response.url); // Mostra a URL sendo buscada
         if (!response.ok) {
