--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -401,20 +401,19 @@ function generatePDF() {
 // Carregar as lições e explicações dinamicamente do arquivo texto.txt
    fetch('/Level1/Unit1/MatchingGame/texto.txt')
     .then(response => {
-        console.log("URL do arquivo:", response.url); // Mostra a URL sendo buscada
         if (!response.ok) {
-            console.error("Erro ao carregar o arquivo texto.txt. Status:", response.status);
-            throw new Error("Erro ao carregar o arquivo texto.txt");
+            throw new Error(`Erro ao carregar o arquivo: ${response.statusText}`);
         }
         return response.text();
     })
     .then(data => {
-        console.log("Conteúdo do arquivo texto.txt:", data);  // Exibe o conteúdo do arquivo para depuração
-        const lines = data.split('\n').filter(line => line.trim() !== '');  // Filtra linhas vazias
+        console.log("Conteúdo do arquivo:", data); // Exibe o conteúdo do arquivo para verificação
+        const lines = data.split('\n').filter(line => line.trim() !== ''); // Divide em linhas e remove vazias
 
+        // Processa cada linha no formato esperado "type|lesson|explanation"
         lines.forEach((line, index) => {
             const [type, lesson, explanation] = line.split('|').map(item => item.trim());
-            if (type === 'lesson' && lesson && explanation) {  // Verifica se todos os campos estão preenchidos
+            if (type === 'lesson' && lesson && explanation) {
                 lessonData.push({
                     img: `imagens/imagem${index + 1}.png`,
                     title: lesson,
@@ -424,20 +423,20 @@ function generatePDF() {
             }
         });
 
-        console.log("Dados das lições carregadas:", lessonData);  // Exibe os dados carregados
-        
+        console.log("Dados das lições carregadas:", lessonData);
+
+        // Verifica se as lições foram carregadas corretamente
         if (lessonData.length === 0) {
             throw new Error("Nenhuma lição carregada. Verifique o conteúdo do arquivo texto.txt.");
         }
 
-        // Restante do código para embaralhar e exibir as lições
+        // Embaralha e exibe as lições
         const shuffledLessons = shuffleArray([...lessonData]);
         const shuffledExplanations = shuffleArray([...lessonData]);
 
         const lessonsContainer = document.getElementById('lessons');
         const explanationsContainer = document.getElementById('explanations');
 
-        // Preencher as colunas com as lições e explicações embaralhadas
         shuffledLessons.forEach(item => {
             const lessonDiv = document.createElement('div');
             lessonDiv.classList.add('list-item');
