--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -398,8 +398,10 @@ function generatePDF() {
     let currentAnimatedItem = null;
     let currentUtterance = null;  // Para rastrear a leitura atual
 
-// Carregar as lições e explicações dinamicamente do arquivo texto.txt
-   fetch('/Level1/Unit1/MatchingGame/texto.txt')
+// Definir o caminho completo relativo ao arquivo texto.txt
+const filePath = window.location.origin + '/Level1/Unit1/MatchingGame/texto.txt';
+
+fetch(filePath)
     .then(response => {
         if (!response.ok) {
             throw new Error(`Erro ao carregar o arquivo: ${response.statusText}`);
@@ -424,11 +426,6 @@ function generatePDF() {
         });
 
         console.log("Dados das lições carregadas:", lessonData);
-
-        // Verifica se as lições foram carregadas corretamente
-        if (lessonData.length === 0) {
-            throw new Error("Nenhuma lição carregada. Verifique o conteúdo do arquivo texto.txt.");
-        }
 
         // Embaralha e exibe as lições
         const shuffledLessons = shuffleArray([...lessonData]);
