--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -398,21 +398,20 @@ function generatePDF() {
     let currentAnimatedItem = null;
     let currentUtterance = null;  // Para rastrear a leitura atual
 
-// Definir o caminho completo relativo ao arquivo texto.txt
-const filePath = window.location.origin + '/Level1/Unit1/MatchingGame/texto.txt';
-
-fetch(filePath)
+// Carregar as lições e explicações dinamicamente do arquivo texto.txt
+fetch('/Level1/Unit1/MatchingGame/texto.txt')
     .then(response => {
         if (!response.ok) {
             throw new Error(`Erro ao carregar o arquivo: ${response.statusText}`);
         }
-        return response.text();
+        return response.text(); // Obtém o conteúdo como texto
     })
     .then(data => {
-        console.log("Conteúdo do arquivo:", data); // Exibe o conteúdo do arquivo para verificação
-        const lines = data.split('\n').filter(line => line.trim() !== ''); // Divide em linhas e remove vazias
+        console.log("Conteúdo do arquivo:", data); // Exibe o conteúdo para verificação
+        const lines = data.split('\n').filter(line => line.trim() !== ''); // Divide em linhas e remove linhas vazias
 
-        // Processa cada linha no formato esperado "type|lesson|explanation"
+        // Processa cada linha no formato "type|lesson|explanation"
+        let lessonData = [];
         lines.forEach((line, index) => {
             const [type, lesson, explanation] = line.split('|').map(item => item.trim());
             if (type === 'lesson' && lesson && explanation) {
@@ -426,6 +425,10 @@ fetch(filePath)
         });
 
         console.log("Dados das lições carregadas:", lessonData);
+
+        if (lessonData.length === 0) {
+            throw new Error("Nenhuma lição carregada. Verifique o conteúdo do arquivo texto.txt.");
+        }
 
         // Embaralha e exibe as lições
         const shuffledLessons = shuffleArray([...lessonData]);
