--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -399,7 +399,7 @@ function generatePDF() {
     let currentUtterance = null;  // Para rastrear a leitura atual
 
 // Carregar as lições e explicações dinamicamente do arquivo texto.txt
-    fetch('texto.txt')
+    fetch('https://hannahenglishcourse.vercel.app/Level1/Unit1/MatchingGame/texto.txt')
         .then(response => response.text())
         .then(data => {
             const lines = data.split('\n');
