--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -275,7 +275,8 @@
     <p>Congratulations! You have completed this phase.</p>
     <button onclick="closeModal()">Close</button>
 </div>
-/* Container para mostrar a imagem e o texto */
+
+<!-- Container para mostrar a imagem e o texto -->
 <div class="image-container" id="image-container">
     <button class="close-btn" onclick="closeImage()">×</button>
     <img id="lesson-image" src="" alt="Lesson Image">
