--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -308,6 +308,50 @@
     // Inicialização do Firebase
     firebase.initializeApp(firebaseConfig);
 
+// Declaração única de lessonData no início do código
+let lessonData = []; // Esta será a única declaração da variável lessonData
+
+// Adicione a função loadLessonData
+function loadLessonData() {
+    return fetch('https://hannahenglishcourse.vercel.app/Level1/Unit1/MatchingGame/texto.txt')
+        .then(response => {
+            if (!response.ok) {
+                throw new Error(`Erro ao carregar o arquivo: ${response.statusText}`);
+            }
+            return response.text(); // Obtém o conteúdo como texto
+        })
+        .then(data => {
+            console.log("Conteúdo do arquivo:", data); 
+            const lines = data.split('\n').filter(line => line.trim() !== ''); 
+
+            // Processamento dos dados
+            lines.forEach((line, index) => {
+                const [type, lesson, explanation] = line.split('|').map(item => item.trim());
+                if (type === 'lesson' && lesson && explanation) {
+                    lessonData.push({
+                        img: `imagens/imagem${index + 1}.png`,
+                        title: lesson,
+                        text: explanation,
+                        matchIndex: index + 1
+                    });
+                }
+            });
+
+            console.log("Dados das lições carregadas:", lessonData);
+            if (lessonData.length === 0) {
+                throw new Error("Nenhuma lição carregada. Verifique o conteúdo do arquivo texto.txt.");
+            }
+
+            displayLessonsAndExplanations();
+        })
+        .catch(error => {
+            console.error("Erro ao carregar os dados:", error);
+        });
+}
+
+// Chame loadLessonData() no local apropriado (por exemplo, no início do script ou onde necessário)
+loadLessonData();
+
 firebase.auth().onAuthStateChanged((user) => {
     if (user) {
         const userId = user.uid;
@@ -389,16 +433,9 @@ function generatePDF() {
     };
 }
 
-    let lessonData = [];
     let selectedLeftItem = null;
     let currentAnimatedItem = null;
     let currentUtterance = null;  // Para rastrear a leitura atual
-
-// Carregar as lições e explicações dinamicamente do arquivo texto.txt
-    fetch('https://hannahenglishcourse.vercel.app/Level1/Unit1/MatchingGame/texto.txt')
-        .then(response => response.text())
-        .then(data => {
-            const lines = data.split('\n');
 
             // Montar o array de lições e explicações
             lines.forEach((line, index) => {
@@ -537,20 +574,7 @@ function generatePDF() {
         window.location.reload();
     }
 
-// Carregar as lições e explicações dinamicamente do arquivo texto.txt
-fetch('/Level1/Unit1/MatchingGame/texto.txt')
-    .then(response => {
-        if (!response.ok) {
-            throw new Error(`Erro ao carregar o arquivo: ${response.statusText}`);
-        }
-        return response.text(); // Obtém o conteúdo como texto
-    })
-    .then(data => {
-        console.log("Conteúdo do arquivo:", data); // Exibe o conteúdo para verificação
-        const lines = data.split('\n').filter(line => line.trim() !== ''); // Divide em linhas e remove linhas vazias
-
         // Processa cada linha no formato "type|lesson|explanation"
-        let lessonData = [];
         lines.forEach((line, index) => {
             const [type, lesson, explanation] = line.split('|').map(item => item.trim());
             if (type === 'lesson' && lesson && explanation) {
