--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -308,6 +308,9 @@
     // Inicialização do Firebase
     firebase.initializeApp(firebaseConfig);
 
+// Aguarde o carregamento completo do DOM
+    document.addEventListener("DOMContentLoaded", function() {
+
 // Declaração única de lessonData no início do código
 let lessonData = []; // Esta será a única declaração da variável lessonData
 
