--- a/Level1/Unit1/MatchingGame/index.html
+++ b/Level1/Unit1/MatchingGame/index.html
@@ -389,13 +389,34 @@
         return array;
     }
 
-    function selectLeftItem(element) {
-        // Implementação de seleção
-    }
+    let selectedLeftItem = null;
 
-    function selectRightItem(element) {
-        // Implementação de seleção
+function selectLeftItem(element) {
+    if (selectedLeftItem) {
+        selectedLeftItem.classList.remove('selected');
     }
+    selectedLeftItem = element;
+    element.classList.add('selected');
+}
+
+function selectRightItem(element) {
+    if (!selectedLeftItem) return;
+
+    if (selectedLeftItem.dataset.match === element.dataset.match) {
+        // Correspondência correta
+        element.classList.add('correct');
+        selectedLeftItem.classList.add('used');
+        selectedLeftItem.classList.remove('selected');
+        selectedLeftItem = null;
+        checkCompletion(); // Verifica se todas as correspondências foram feitas
+    } else {
+        // Correspondência incorreta
+        element.classList.add('wrong');
+        setTimeout(() => {
+            element.classList.remove('wrong');
+        }, 1000);
+    }
+}
 
     function restartGame() {
         window.location.reload();
